<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ericlam.mc</groupId>
    <artifactId>McInfected</artifactId>
    <version>0.1.21</version>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>dragonite</id>
            <url>https://nexus.pulogo.xyz/repository/developer/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>md_5-public</id>
            <url>https://repo.md-5.net/content/groups/public/</url>
        </repository>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/ELDependenci/eldependenci</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.dragonite.mc</groupId>
            <artifactId>minigame-miscs</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>LibsDisguises</artifactId>
            <version>10.0.28</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.comphenix.protocol</groupId>
                    <artifactId>ProtocolLib</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.spigotmc</groupId>
                    <artifactId>spigot</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.spigotmc</groupId>
                    <artifactId>spigot-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.18.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.dragonite.mc</groupId>
            <artifactId>core-api</artifactId>
            <version>7.6.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.dragonite.mc</groupId>
            <artifactId>minigame-api</artifactId>
            <version>0.1.17</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>crackshot</artifactId>
            <version>0.98.11</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>crackshotplus</artifactId>
            <version>1.105</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.ericlam.mc</groupId>
            <artifactId>custom-csweapon</artifactId>
            <version>1.5.13</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.dragonite.mc</groupId>
            <artifactId>DragonEconomy</artifactId>
            <version>1.0.4</version>
        </dependency>
        <dependency>
            <groupId>org.eldependenci</groupId>
            <artifactId>eldependenci-bukkit</artifactId>
            <version>2.0.4-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>18</source>
                    <target>18</target>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>